2005-09-28  William Jon McCann  <mccann@jhu.edu>

	* gui/gdmflexiserver.c (is_program_in_path, maybe_lock_screen) 
	(run_logged_in_dialogue, main): Consolidate screensaver
	activation code.  Don't use deprecated gnome-exec.
	Fixes #311497.
	
2005-09-27  Brian Cameron <Brian.Cameron@sun.com>

	* gui/greeter/greeter_item_ulist.c: Now print syslog
	  warning if GDM theme has ulist but does not have
	  pam-message.

2005-09-26  Brian Cameron <Brian.Cameron@sun.com>

	* gui/gdmflexiserver.c:  Add --startnew option so that
	  gdmflexiserver can be told to not pop-up the dialog
	  asking if user wants to start a current session.
	  This is needed to support running gdmflexiserver
	  from the screensaver.

2005-09-26  Brian Cameron <Brian.Cameron@sun.com>

	* gui/gdmsetup.c, gui/gdmphotosetup.c:  Only set right/left
	  mouse buttons to map to button1 when RUNNING_UNDER_GDM
	  and now show hidden files by default in file dialogs.
	  Fixes bug #317152.

2005-09-20  Brian Cameron <Brian.Cameron@sun.com>

        * README.install, pam_allow.c: Add documentation
          regarding how to set up Automatic Login on
          Solaris.
        * daemon/Makefile.am, gui/Makefile.am,
          gui/greeter/Makefile.am, gui/modules/Makefile.am,
          vicious-extensions/Makefile.am:  Remove
          illegal reference to build directory in installed
          .la files.  Fixes bug #316793, patch provided by
          Stanislav Brabec <sbrabec@suse.cz>.
        * gui/gdmlogin.c: Fix comment for translators to
          make it more clear that %l is a strftime option
          for 12 hour format.  Fixes bug #316773.

2005-09-14  Bastien Nocera  <hadess@hadess.net>

        * daemon/xdmcp.c: (gdm_xdmcp_decode_packet):
         Make XdmcpFill() failure a debug, as it also happens when the client
         disconnects from the XDMCP server before the session was setup
         (Closes: #316316)

2005-09-14  Brian Cameron <Brian.Cameron@sun.com>
